# starter-kit

./: .gitignore  README.md
best_practices/: README.md
coding_standards/: README.md
coding_standards/unit-tests/: README.md
coding_standards/unit-tests/nlp/: config.py  conftest.py  setup.py  utils.py
concepts/unit-tests/nlp/: model_utils.py  processing_utils.py
environment_setup/macbook_setup/: README.md  com.googlecode.iterm2.plist  configure_anaconda.sh  configure_vscode.sh
environment_setup/vs_code_config/: README.md
learning_resources/: README.md
projects/: README.md
technos/: README.md
technos/Django/: README.md
technos/docker/: .dockerignore  docker-compose.yml
technos/docker/home/: urls.py
technos/pandas_spark/: Focus Topic DE - Spark.html  tuto_simple_steps.md
tips/: README.md
tips/docker/: .env  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  requirements.txt
tips/docker/django_app/: settings.py  urls.py
tips/docker/home/: forms.py  models.py  views.py
tips/docker/members/: forms.py  urls.py  views.py
tips/docker/register/: forms.py  urls.py  views.py
tips/env-setup/macbook_setup/: .pylintrc  install_complements.sh
tips/env-setup/vs_code_config/: extensions.json  settings.json
tips/env_creation/: Readme.md  pyproject.toml
tips/git/: README.md
tips/unit-tests/: requirements.txt
tools/: README.md
tools/macbook_setup/: README.md
welcome_kit/env_creation/: Readme.md  pyproject.toml
welcome_kit/git_help/: README.md
welcome_kit/predicting_readmission/: README.md  requirement.txt
(+53 files in other folders)
